--- a/plat.conf
+++ b/plat.conf
@@ -1,25 +1,25 @@
 #tag|update|installcmd|tools|
 
--ubuntu|apt-get -qqy update && locale-gen en_US.UTF-8 && export LANG=en_US.UTF-8 |apt-get -qqy install|openssl,cron,netcat-openbsd,curl,idn|
+-ubuntu|apt-get -y update && locale-gen en_US.UTF-8 && export LANG=en_US.UTF-8 |apt-get -y install|openssl,cron,socat,curl,idn|
 ubuntu:latest|
 ubuntu:17.04|
 ubuntu:16.04|
 ubuntu:15.04|
 ubuntu:14.04|
 
--debian|apt-get -qqy update |apt-get -qqy install|openssl,cron,netcat-openbsd,curl,idn|
+-debian|apt-get -y update |apt-get -y install|openssl,cron,socat,curl,idn|
 debian:latest|
 debian:9|
 debian:8|
 debian:7|
 
--centos|yum -q -y update    |yum -q -y install   |openssl,crontabs,nc,curl|
+-centos|yum  -y update    |yum  -y install   |openssl,crontabs,socat,curl|
 centos:latest|
 centos:7|
 centos:6|
-centos:5|||openssl,vixie-cron,nc,curl|
 
--fedora|yum -q -y update    |yum -q -y install   |tar,openssl,crontabs,nc,curl|
+
+-fedora|yum  -y update    |yum  -y install   |tar,openssl,crontabs,socat,curl|
 fedora:latest|
 fedora:26|
 fedora:25|
@@ -29,13 +29,13 @@ fedora:22|
 fedora:21|
 
 
--opensuse|zypper update -y |zypper install  -y  |tar,openssl,cron,netcat,curl,libidn|
+-opensuse|zypper update -y |zypper install  -y  |tar,openssl,cron,socat,curl,libidn|
 opensuse:latest|
 opensuse:42.2|
 opensuse:42.1|
 opensuse:13.2|
 
--alpine|apk update -f|apk --no-cache add -f|openssl,curl,netcat-openbsd|
+-alpine|apk update -f|apk --no-cache add -f|openssl,curl,socat|
 alpine:latest|
 alpine:3.5|
 alpine:3.4|
@@ -43,16 +43,16 @@ alpine:3.3|
 alpine:3.2|
 alpine:3.1|
 
--oraclelinux|yum -q -y update    |yum -q -y install   |tar,openssl,crontabs,nc,curl|
+-oraclelinux|yum -y update    |yum -y install   |tar,openssl,crontabs,socat,curl|
 oraclelinux:latest|
 oraclelinux:7|
 oraclelinux:6|
 
-kalilinux/kali-linux-docker|apt-get -qqy update|apt-get -qqy install|openssl,cron,netcat-openbsd,curl,idn|
+kalilinux/kali-linux-docker|apt-get -y update|apt-get -y install|openssl,cron,socat,curl,idn|
 
-base/archlinux||pacman  -Sy -q --force --noconfirm --noprogressbar|openssl,cron,openbsd-netcat,libidn|
+base/archlinux||pacman  -Sy  --force --noconfirm --noprogressbar|openssl,cron,socat,libidn|
 
-mageia|urpmi --auto-update --auto -q |urpmi --auto -q |openssl,netcat,idn|
+mageia|urpmi --auto-update --auto -q |urpmi --auto -q |openssl,socat,idn|
 
 
-gentoo/stage3-amd64| emerge --sync | ACCEPT_KEYWORDS="~amd64" emerge | net-misc/curl,sys-process/vixie-cron,net-analyzer/openbsd-netcat
+gentoo/stage3-amd64| emerge --sync | ACCEPT_KEYWORDS="~amd64" emerge | net-misc/curl,sys-process/vixie-cron,net-misc/socat
