--- a/plat.conf
+++ b/plat.conf
@@ -52,7 +52,7 @@ kalilinux/kali-linux-docker|apt-get -y update|apt-get -y install|openssl,cron,so
 
 base/archlinux||pacman  -Sy  --force --noconfirm --noprogressbar|openssl,cron,socat,libidn|
 
-mageia|dnf update -y |dnf install -y |openssl,socat,idn|
+mageia|dnf update -y |dnf install -y |openssl,socat,idn,curl|
 
 
 gentoo/stage3-amd64| emerge --sync | ACCEPT_KEYWORDS="~amd64" emerge | net-misc/curl,sys-process/vixie-cron,net-misc/socat
