--- a/plat.conf
+++ b/plat.conf
@@ -32,8 +32,8 @@ fedora:21|
 -opensuse|zypper update -y |zypper install  -y  |tar,openssl,cron,socat,curl,libidn|
 opensuse:latest|
 opensuse:42.2|
-opensuse:42.1|
-opensuse:13.2|
+opensuse:42.1|zypper rr OSS NON-OSS && zypper update -y |
+opensuse:13.2|zypper rr OSS NON-OSS && zypper update -y |
 
 -alpine|apk update -f|apk --no-cache add -f|openssl,curl,socat|
 alpine:latest|
