--- a/plat.conf
+++ b/plat.conf
@@ -16,7 +16,7 @@ debian:7|
 -centos|yum  -y update    |yum  -y install   |openssl,crontabs,socat,curl|
 centos:latest|
 centos:7|
-centos:6|
+centos:6|curl http://www.convirture.com/repos/definitions/rhel/6.x/convirt.repo > /etc/yum.repos.d/convirt.repo && yum  -y update    |
 
 
 -fedora|yum  -y update    |yum  -y install   |tar,openssl,crontabs,socat,curl|
