--- a/plat.conf
+++ b/plat.conf
@@ -33,7 +33,7 @@ fedora:21|
 opensuse:latest|
 opensuse:42.2|
 opensuse:42.1|zypper rr OSS NON-OSS && zypper update -y |
-opensuse:13.2|zypper rr OSS NON-OSS && zypper update -y |
+opensuse:13.2|zypper rr OSS NON-OSS 'OSS Update' 'Update Non-Oss' && zypper update -y |
 
 -alpine|apk update -f|apk --no-cache add -f|openssl,curl,socat|
 alpine:latest|
