--- a/plat.conf
+++ b/plat.conf
@@ -46,7 +46,7 @@ alpine:3.1|
 -oraclelinux|yum -y update    |yum -y install   |tar,openssl,crontabs,socat,curl|
 oraclelinux:latest|
 oraclelinux:7|
-oraclelinux:6|
+oraclelinux:6|curl http://www.convirture.com/repos/definitions/rhel/6.x/convirt.repo > /etc/yum.repos.d/convirt.repo && yum  -y update    |
 
 kalilinux/kali-linux-docker|apt-get -y update|apt-get -y install|openssl,cron,socat,curl,idn|
 
