add unzip for ubuntu

--- a/plat.conf
+++ b/plat.conf
@@ -1,6 +1,6 @@
 #tag|update|installcmd|tools|
 
--ubuntu|apt-get -y update |apt-get -y install|openssl,cron,socat,curl,idn|
+-ubuntu|apt-get -y update |apt-get -y install|unzip,openssl,cron,socat,curl,idn|
 ubuntu:latest|
 ubuntu:17.04|
 ubuntu:16.04|
