--- a/plat.conf
+++ b/plat.conf
@@ -20,6 +20,7 @@ centos:6|curl http://www.convirture.com/repos/definitions/rhel/6.x/convirt.repo 
 
 -fedora|yum  -y update    |yum  -y install   |tar,openssl,crontabs,socat,curl|
 fedora:latest|
+fedora:27|
 fedora:26|
 fedora:25|
 fedora:24|
@@ -36,6 +37,8 @@ opensuse:42.1|zypper rr OSS NON-OSS && zypper update -y |
 
 -alpine|apk update -f|apk --no-cache add -f|openssl,curl,socat|
 alpine:latest|
+alpine:3.7|
+alpine:3.6|
 alpine:3.5|
 alpine:3.4|
 alpine:3.3|
