fix centos:6 and oraclelinux

--- a/plat.conf
+++ b/plat.conf
@@ -14,7 +14,7 @@ debian:7|
 -centos|yum  -y update    |yum  -y install   |openssl,crontabs,socat,curl|
 centos:latest|
 centos:7|
-centos:6|curl http://www.convirture.com/repos/definitions/rhel/6.x/convirt.repo > /etc/yum.repos.d/convirt.repo && yum  -y update    |
+centos:6|rpm -i https://forensics.cert.org/cert-forensics-tools-release-el6.rpm && yum  -y update | yum  --enablerepo=forensics -y install
 
 
 -fedora|yum  -y update    |yum  -y install   |tar,openssl,crontabs,socat,curl|
@@ -47,7 +47,7 @@ alpine:3.1|
 -oraclelinux|yum -y update    |yum -y install   |tar,openssl,crontabs,socat,curl|
 oraclelinux:latest|
 oraclelinux:7|
-oraclelinux:6|curl http://www.convirture.com/repos/definitions/rhel/6.x/convirt.repo > /etc/yum.repos.d/convirt.repo && yum  -y update    |
+oraclelinux:6|rpm -i https://forensics.cert.org/cert-forensics-tools-release-el6.rpm && yum  -y update  | yum  --enablerepo=forensics -y install
 
 kalilinux/kali-linux-docker|apt-get -y update|apt-get -y install|openssl,cron,socat,curl,idn|
 
